Updated to support carthage

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ sourcekitten-output.json
 docs/
 /.build
 /Packages
-/*.xcodeproj
-**/xcuserdata
-**/xcshareddata
+# /*.xcodeproj
+# **/xcuserdata
+# **/xcshareddata
 Pods/
 Carthage/
 Examples/**/Podfile.lock
